# tinyTT

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  CTT-CHANGES.md  LICENSE  README.md  TinyTT_Test.ipynb  conftest.py  diagnose_doerfler.py  mkdocs.yml  pyproject.toml  requirements-ref.txt  requirements.txt  ruff.toml
docs/: examples.md  flow_matching.md  getting-started.md  index.md
examples/: adaptive_ngf_identity.py  basic_usage.py  benchmark_ctt_advection_diffusion.py  benchmark_ctt_corrections.py  benchmark_ctt_multiseed.py  benchmark_ctt_nonlinear_d10.py  compare_methods.py  ctt_high_dim_example.py  ctt_multilayer_example.py  ctt_param_ode.py  ctt_tinygrad_example.py  device_basics.py  flow_matching_banana.py  flow_matching_suite.py  functional_tt.py  heat_dfi_dfo.py  heat_equation.py  interpolate_basics.py  mpo_ising_tdvp.py  nonlinear_transport.py  optimize_ctt.py  plot_clora_params.py  qtt_basics.py  riemannian_basics.py  stta_qtt_example.py  test_constraint_impact.py  tt_autograd.py  tt_basics.py  tt_clora_benchmark.py  tt_clora_parametric_heat.py  tt_compositional.py  tt_dmrg.py  tt_fast_products.py  tt_ftt_als.py  tt_functional.py  tt_helpers.py  tt_linalg.py  tt_qtt_functional.py  tt_qtt_parametric_darcy.py  tt_qtt_solve.py  (+7 more)
notebooks/: functional_tt.ipynb  qtt_basics.ipynb  tt_basics.ipynb
scripts/: generate_notebooks.py
tests/: test_adaptive_energy.py  test_adaptive_local_frames.py  test_adaptive_solver_identity.py  test_adaptive_zero_expand.py  test_als_reliability.py  test_amen.py  test_aux_ops.py  test_backend.py  test_basis.py  test_bicgstab.py  test_bug.py  test_bug_vs_tdvp.py  test_cg.py  test_clora.py  test_compositional.py  test_conditional_transport.py  test_ctt.py  test_decomposition.py  test_decomposition_internals.py  test_dmrg_hadamard.py  test_error_cases.py  test_examples_regression.py  test_extras_full.py  test_fast_mult.py  test_fast_products.py  test_fem.py  test_flow_matching.py  test_flow_matching_benchmark_gate.py  test_functional.py  test_functional_tt.py  test_gmres.py  test_gpu_ops.py  test_gpu_smoke.py  test_grad.py  test_grad_extras.py  test_interpolate.py  test_linesearch.py  test_manifold.py  test_manifold_functional.py  (+25 more)
(+94 files in other folders)
