[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0", "wheel", "numpy>=1.18"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tinytt"]

#[tool.setuptools.package-data]
#torchtt = ["cpp/*"]

[project]
name = "tinyTT"
version = "0.3"
description = "Tensor-Train decomposition in tinygrad."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.18"
]
license = {file = "LICENSE"}
authors = [
    { name = "Ion Gabriel Ion", email = "ion.ion.gabriel@gmail.com" }
]
keywords = ["tinygrad", "tensor-train decomposition"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
