[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0", "wheel", "numpy>=1.18"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tinytt*"]



[project]
name = "tinyTT"
version = "0.4"
description = "Tensor-Train decomposition — tinygrad and PyTorch backends, Riemannian manifold, certified solvers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.18",
    "tinygrad",
]
license = {file = "LICENSE"}
authors = [
    { name = "Ion Gabriel Ion", email = "ion.ion.gabriel@gmail.com" }
]
keywords = ["tinygrad", "pytorch", "tensor-train", "tt-decomposition", "riemannian-optimisation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
markers = [
    "fast: quick smoke tests intended for tight feedback loops",
    "slow: long-running integration or reference-quality tests",
]
testpaths = [
    "tests",
]
